--- a/client/src/components/UI/ToolBar/ToolBar.css
+++ b/client/src/components/UI/ToolBar/ToolBar.css
@@ -1,10 +1,12 @@
 .toolbar {
   width: 100%;
   position: absolute;
-  background: #7F7FD5;
-  height: 56px;
+  background:#3f51b5;
+  opacity: 0.9;
+  height: 70px;
   top: 0;
-  left: 0
+  left: 0;
+  font-size: 18px;
 }
 
 .toolbar__navigation {
