--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,5 +7,5 @@ body {
   padding: 0;
   height: 100%;
   font-family: sans-serif;
-  background-color: #dcdcdc;
+  background-color: springgreen;
 }
