--- a/client/src/pages/About/about.css
+++ b/client/src/pages/About/about.css
@@ -3,7 +3,7 @@
 
 .about-page {
     /* background-image: url(about-image.jpg); */
-    background-color: azure;
+    /* background-color: azure; */
     /* background-color: gainsboro; */
     padding-top: 5%;
     padding-bottom: 5%;
